--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,8 +3,10 @@
     "baseUrl": "./src",
     "paths": {
       "@pixi.alias": ["engine/alias/pixi.alias.js"],
+
       // "@three.alias": ["engine/three.alias.js"],
       // "@engine": ["engine/engine.js"]
-    }
-  }
+    },
+  },
+  "include": ["src"]
 }
