change file name to kebab-case

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "paths": {
-      "@pixi.alias": ["engine/alias/pixi.alias.js"],
+      "@pixi.alias": ["engine/alias/pixi-alias.js"],
 
       // "@three.alias": ["engine/three.alias.js"],
       // "@engine": ["engine/engine.js"]
