add mesh-renderer& load function

--- a/src/engine/package.json
+++ b/src/engine/package.json
@@ -12,5 +12,8 @@
     "files": [
         "dist"
     ],
-    "sideEffects": false
+    "sideEffects": false,
+    "scripts": {
+        "build": "node build-engine.js"
+    }
 }
