--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "type": "module",
   "scripts": {
-    "gen-pixi-alias": "node src/engine/generator/pixi/generate-pixi-alias.js",
-    "gen-three-alias": "node src/engine/generator/three/generate-three-alias.js",
-    "dev": "cross-env NODE_ENV=development node src/engine/service/build/build-game.js",
-    "build": "node src/engine/generator/pixi/strip-pixi.js && node src/engine/generator/pixi/minify-pixi.js &&  node src/engine/generator/three/strip-three.js && node src/engine/generator/three/minify-three.js && cross-env NODE_ENV=production node esbuild.config.js && npx open http://localhost:8080/index.html",
+    "prepare": "node src/engine/service/watcher/watcher.js",
+    "build": "node src/engine/service/build/build-game.js",
     "clean-build": "rimraf dist && npm run build"
   },
   "dependencies": {
@@ -32,7 +30,6 @@
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-terser": "^0.4.4",
-    "@yushijinhun/three-minifier-rollup": "^0.4.0",
     "babel-loader": "^10.0.0",
     "babel-plugin-transform-remove-imports": "^1.8.1",
     "cross-env": "^10.0.0",
@@ -43,6 +40,7 @@
     "esbuild-plugin-html": "^1.0.0",
     "esbuild-plugin-inline-css": "^0.0.1",
     "esbuild-plugin-inline-image": "^0.0.9",
+    "esbuild-plugin-swc": "^1.0.1",
     "open": "^10.2.0",
     "rollup": "^4.52.4",
     "rollup-plugin-esbuild": "^6.2.1",
